<resources>
  <string name="app_name">Vote</string>
  <string name="action_settings">Settings</string>
  <string name="SystemConfig_sp">SystemConfig</string>
  <string name="login_first_toast">please login in first !</string>
  <string name="login_pwd_error_toast">Password error , please try again !</string>
  <string name="SystemLog">SYSTEM LOG</string>
  <string name="System">SYSTEM</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="Scanning">Scanning</string>
  <string name="login_entry_ET_toast">Verification Type is</string>
  <string name="login_entry_ET_begin_time_toast">Start Time is</string>
  <string name="login_entry_ET_end_time_toast">End Time is</string>
  <string name="screen_login_text_code">Code</string>
  <string name="screen_login_text_electiontype">Verification Type</string>
  <string name="screen_login_text_name">Name</string>
  <string name="screen_login_text_password">Password</string>
  <string name="screen_login_button_modifypwd">Change password</string>
  <string name="screen_login_button_entry">Login</string>
  <string name="screen_login_exit_dialog">Log out ? </string>
  <string name="screen_login_exit_toast_backup">Database saved !</string>
  <string name="screen_login_exit_toast_backup_fail">Backup Failed !</string>
  <string name="screen_login_exit_text">Total Accredited : </string>
  <string name="screen_login_exit_text_s">Passes total : </string>
  <string name="screen_login_exit_text_f">Failed total : </string>
  <string name="screen_login_usermodify_error_toast">Administrator Change Unauthorized !</string>
  <string name="screen_mainmenu_dialog_title">Prompt</string>
  <string name="userlist_title_name">Name</string>
  <string name="userlist_title_sum">Sum:</string>
  <string name="userlist_title_success">Success:</string>
  <string name="userlist_title_fail">Fail:</string>
  <string name="userlist_title_Query">Query:</string>
  <string name="userlist_title_pwd">Password</string>
  <string name="vinlist_title_vin">Vin</string>
  <string name="vinlist_title_status">Status</string>
  <string name="vinlist_listdialog_status_y">Select Y</string>
  <string name="vinlist_listdialog_status_n">Select N</string>
  <string name="systemconfig_title">Setting</string>
  <string name="systemconfig_dialog_set_success_toast">Setting Succeeded</string>
  <string name="systemconfig_dialog_set_fail_toast">Setting failed</string>
  <string name="systemconfig_sp_noset">No setting</string>
  <string name="systemconfig_sp_set">Setting</string>
  <string name="systemconfig_dialog_edittext_empty">Empty settings !</string>
  <string name="systemconfig_toast_updatetime_s">Time update succeeded !</string>
  <string name="systemconfig_toast_updatetime_f">Time update failed !</string>
  <string name="systemconfig_set_begindatetime_error">Vote time cannot be earlier than current time!</string>
  <string name="systemconfig_set_begindatetime_error_ext">Start time later than end time, please reset end time!</string>
  <string name="systemconfig_set_enddatetime_error_ext">Vote end time should be later than start time, please reset!</string>
  <string name="systemconfig_set_port_error">GPRS Port should be from 0 to 65535, please reset!</string>
  <string name="systemconfig_dialog_set_election_type_title">Add Vote type</string>
  <string name="add_electiontype_error_toast">Vote type exists !</string>
  <string name="userlist_text_modifyname">Change username</string>
  <string name="userlist_text_modifypwd">Change user password</string>
  <string name="userlist_success_modifyname">Username changed !</string>
  <string name="userlist_success_modifypwd">Password changed !</string>
  <string name="userlist_fail_modifyname">Change username failed !</string>
  <string name="userlist_fail_modifypwd">Change password failed !</string>
  <string name="userlist_dialogtitle">Please select operation</string>
  <string name="login_user_error_toast">User does not exist !</string>
  <string name="add_user_error_toast">User already exists !</string>
  <string name="add_user_success_toast">Add user succeeded !</string>
  <string name="add_username_empty_toast">Empty username !</string>
  <string name="add_userpwd_empty_toast">Empty password !</string>
  <string name="add_user_fail_toast">Add user failed !</string>
  <string name="entry_user_name_toast">Please insert new username !</string>
  <string name="entry_user_pwd_toast">Please insert password !</string>
  <string name="entry_user_new_pwd_toast">Please enter the new password !</string>
  <string name="entry_username_modify_toast">Please insert username to be changed !</string>
  <string name="user_pwd_error_toast">Password incorrect !</string>
  <string name="entry_max_num_toast">Maximum insert quantity is</string>
  <string name="userlist_dialogtitle_query">Please insert query username</string>
  <string name="userlist_toast_query_over">Query done</string>
  <string name="userlist_dialogtitle_delete">Are you sure to delete the user ?</string>
  <string name="userlist_toast_success_delete">Deleted</string>
  <string name="userlist_toast_delete_admin">Administrator cannot be deleted</string>
  <string name="userlist_toast_delete_noselete">No user selected !</string>
  <string name="vinlist_dialog_query_title">Please select query</string>
  <string name="dataentry_title_name">Data entry</string>
  <string name="dataentry_et_hint">Please enter</string>
  <string name="dataentry_titlelist_name">File List</string>
  <string name="dataentry_file_nonexistent">The file does not exist !</string>
  <string name="dataentry_file_empty">Empty file can not be saved !</string>
  <string name="dataentry_savefile_error">Save file error !</string>
  <string name="dataentry_savefile_success">File saved !</string>
  <string name="dataentry_filelist_open_error">Open file error !</string>
  <string name="dataentry_filelist_delete_error">Delete file error !</string>
  <string name="dataentry_filelist_delete_success">File deleted !</string>
  <string name="dataentry_filelist_delete_dialog">Are you sure to delete the file ?</string>
  <string name="dataentry_toast_is_save">Access file list and save the data ?</string>
  <string name="systemabout_title">System About</string>
  <string name="datasend_text_sendbutton">Send</string>
  <string name="datasend_text_backbutton">Back</string>
  <string name="datasend_text_status_process">Sending !</string>
  <string name="datasend_text_status_success">Send Success !</string>
  <string name="datasend_text_status_fail">Send fail !</string>
  <string name="datasend_text_status">Send Status</string>
  <string name="datasend_progressdialog_text">Uploading data to server ......</string>
  <string name="datasend_toast_nodata">Empty database, no uploading !</string>
  <string name="adminmainmenu_text_user">USER</string>
  <string name="adminmainmenu_text_datatransmit">COMMUNICATE</string>
  <string name="adminmainmenu_text_exit">LOGOUT</string>
  <string name="adminmainmenu_text_reset">RESET</string>
  <string name="adminmainmenu_text_configSetting">CONFIG</string>
  <string name="adminmainmenu_text_about">INFORMATION</string>
  <string name="mainmenu_text_dataentry">NOTE</string>
  <string name="mainmenu_text_querystate">QUERY</string>
  <string name="mainmenu_text_authentiction">VERIFICATION</string>
  <string name="personscreen_text_gender">GENDER</string>
  <string name="personscreen_text_birthday">DATE OF BIRTH</string>
  <string name="personscreen_text_occupation">Occupation</string>
  <string name="personscreen_text_name">NAME</string>
  <string name="personscreen_text_vin">IDENTIFICATION NUMBER</string>
  <string name="personscreen_text_code">UNIT CODE</string>
  <string name="personscreen_text_Surname">SURNAME</string>
  <string name="personscreen_text_result_success">Voter Accreditation Successful</string>
  <string name="personscreen_text_result_fail">Fingerprint Mismatch</string>
  <string name="personscreen_text_result_fail2">This voter has already been accredited !</string>
  <string name="personscreen_text_result_fail3">Code Match failed</string>
  <string name="adminmain_text_reset_title">RESET</string>
  <string name="adminmain_text_reset">Reset and delete all data ?</string>
  <string name="adminmain_dialog_title">Please insert administrator password</string>
  <string name="adminmain_dialog_pwd_error">Administrator password incorrect, please re-enter</string>
  <string name="adminmain_text_reset_success">Restored to factory settings !</string>
  <string name="adminmain_text_reset_fail">Reset failed, please try again !</string>
  <string name="systemconfig_get_sc_fail_nofile_toast">Setting failed, configuration file is not found !</string>
  <string name="System_Log_title_date">Date</string>
  <string name="System_Log_title_event">Event</string>
  <string name="System_Log_query_dialog_title">Query by date</string>
  <string name="System_Log_query_text">Found</string>
  <string name="System_Log_query_num">Record</string>
  <string name="System_Log_query_fail">No record!</string>
  <string name="System_Log_event_login">Login</string>
  <string name="System_Log_event_logout">Log out</string>
  <string name="System_Log_event_changepwd">Change password</string>
  <string name="System_Log_event_adduser">Add user</string>
  <string name="System_Log_event_deleteuser">Delete user</string>
  <string name="System_Log_event_changename">Change username</string>
  <string name="System_Log_event_transfer">Data transfer</string>
  <string name="System_Log_event_updatetime">Update Time</string>
  <string name="submainmenu_text_Setting">SETTINGS</string>
  <string name="submainmenu_text_BACK">BACK</string>
  <string name="userlist_toast_changename_admin">You cannot change Admin name</string>
  <string name="personscreen_text_dialog_hint">Reading...</string>
  <string name="personscreen_text_readnfc_success">Reading finished !</string>
  <string name="personscreen_text_readnfc_fail">Reading failed !</string>
  <string name="personscreen_text_pucode_fail">Other PU card !</string>
  <string name="systemconfig_toast_updateconfig_s">Parameter Updated !</string>
  <string name="systemconfig_toast_updateconfig_f">Parameter Update Failed !</string>
  <string name="adminmainmenu_text_mrz">PASSPORT</string>
  <string name="adminmainmenu_text_auth">SCANNING</string>
    <string name="adminmainmenu_text_access">MRZ</string>
    <string name="text_rftest_SIMTest">SIM Test</string>
    <string name="text_rftest_RFTest">RF Test</string>
    <string name="text_rftest_FprintTest">Fprint Test</string>
    <string name="text_rftest_snr">snr</string>
    <string name="text_rftest_RfidOpen">Rfid Open</string>
    <string name="text_rftest_openecho">open echo</string>
    <string name="text_rftest_RfidInit">Rfid Init</string>
    <string name="text_rftest_initecho">init echo</string>
    <string name="text_rftest_GetSNR">Get SNR</string>
    <string name="text_rftest_Rats">Rats</string>
    <string name="text_rftest_rats1">rats</string>
    <string name="text_rftest_cmd">cmd</string>
    <string name="text_rftest_RfApdu">Rf Apdu</string>
    <string name="text_rftest_rfapduecho">rfapdu echo</string>
    <string name="text_rftest_RfidClose">Rfid Close</string>
    <string name="text_rftest_closeecho">close echo</string>
    <string name="text_rftest_FieldOff">Field Off</string>
    <string name="text_rftest_echo">echo</string>
    <string name="text_rftest_Slot">Slot:</string>
    <string name="text_rftest_Baut">Baut:</string>
    <string name="text_rftest_Volt">Volt:</string>
    <string name="text_rftest_Apdu">Apdu</string>
    <string name="text_rftest_Reset">Reset</string>
    <string name="text_rftest_cmdEcho">cmdEcho</string>
    <string name="text_rftest_resetEcho">resetEcho</string>
    <string name="read_sfz">Reader</string>
    <string name="sequential_sfz">Continuous reader</string>
    <string name="stop">Stop</string>
    <string name="clear_sfz">Clear</string>
</resources>