<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/sfz" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/read_sfz"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/read_sfz" />

        <Button
            android:id="@+id/sequential_read"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sequential_sfz" />
        <Button
            android:id="@+id/stop"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/clear_sfz"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_sfz" />

        <TextView
            android:id="@+id/resultInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>