<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="16dip"
    >

    <TextView
        android:id="@+id/tvLabelSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/text_rftest_Slot" />

    <TextView
        android:id="@+id/tvLabelBaut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLabelSlot"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/tvLabelSlot"
        android:text="@string/text_rftest_Baut" />

    <TextView
        android:id="@+id/tvLabelVolt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLabelBaut"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/tvLabelBaut"
        android:text="@string/text_rftest_Volt" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:layout_below="@+id/tvLabelSlot"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_slot"
                android:layout_width="90dp"
                android:layout_height="32dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal" />

            <Spinner
                android:id="@+id/spinner_baut"
                android:layout_width="90dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal" />

            <Spinner
                android:id="@+id/spinner_volt"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/spinner_baut"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

     <Button
        android:id="@+id/button_apdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="250dp"
        android:text="@string/text_rftest_Apdu" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="150dp"
        android:text="@string/text_rftest_Reset" />

    <TextView
        android:id="@+id/textView_cmdEcho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_apdu"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="210dp"
        android:layout_toRightOf="@id/button_apdu"
        android:text="@string/text_rftest_cmdEcho" />

    <EditText
        android:id="@+id/editText_cmd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_weight="1"
        android:ems="10" />

    <TextView
        android:id="@+id/textView_para"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:layout_alignBaseline="@id/button_reset"
        android:layout_toRightOf="@id/button_reset"
        android:text="@string/text_rftest_resetEcho" />

</RelativeLayout>