<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/screen_title_height"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/vinquery_num_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="4dip"
            android:text="@string/userlist_title_sum"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/vinquery_num_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/userlist_title_success"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/vinquery_num_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dip"
            android:text="@string/userlist_title_fail"
            android:textColor="@android:color/white"
            android:textSize="20dip" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/screen_title_height"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="110dip"
            android:text="@string/vinlist_title_vin"
            android:textColor="@android:color/white"
            android:textSize="20dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dip"
            android:text="@string/vinlist_title_status"
            android:textColor="@android:color/white"
            android:textSize="20dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/votedb_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/holo_orange_dark"
            android:dividerHeight="1dip" android:cacheColorHint="#00000000"
            android:listSelector="#00000000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/holo_orange_dark"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_common3"
            android:drawableTop="@drawable/buttonicon_search" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_common3"
            android:drawableTop="@drawable/buttonicon_back" />
    </LinearLayout>

</LinearLayout>